<resources>
    <string name="app_name">Kid\'s Songs</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="news">NEWS</string>
    <string name="favorites">FAVORITES</string>
    <string name="rate_review">RATE</string>
    <string name="add_favorites">Add Favorites</string>
    <string name="option1">Share</string>
    <string name="remove_favorites">Remove Favorites</string>
    <string name="owners">OWNERS</string>
    <string name="song_name">Song Name</string>
    <string name="add">ADD</string>
    <string name="hint_song_name">twinkle twinkle little star</string>
    <string name="hint_youtube_link">https://www.youtube.com/watch?v=f4seEeExvVs</string>
    <string name="ok">Ok</string>
    <string name="please_input">Please input data</string>
    <string name="please_wait">Please Wait</string>
    <string name="youtube_link">https://www.youtube.com/watch?v=</string>
    <string name="please_click_again">Please click BACK again to exit</string>
    <string name="more_app">More App</string>
    <string name="about">About</string>
    <string name="market_name">Haputech</string>
    <string name="version">Version</string>
    <string name="copyright">Copyright © Haputech</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/news</item>
        <item>@string/favorites</item>
        <item>@string/about</item>
    </string-array>

    <string-array name="drawer_icon">
        <item>@drawable/ic_format_list_numbered_grey_500_24dp</item>
        <item>@drawable/ic_stars_grey_500_24dp</item>
        <item>@drawable/ic_info_grey_500_24dp</item>
    </string-array>
    <string-array name="drawer_icon_select">
        <item>@drawable/ic_format_list_numbered_pink_500_24dp</item>
        <item>@drawable/ic_stars_pink_500_24dp</item>
        <item>@drawable/ic_info_pink_500_24dp</item>
    </string-array>
    <string name="ad_unit_id">ca-app-pub-8678171700287005/4606726375</string>
    <string name="banner_ad_unit_id">ca-app-pub-8678171700287005/1653259971</string>
    <string name="connect_error">Error connect!</string>
    <string name="edittext.text.hint">Search...</string>
</resources>
